--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,7 +15,7 @@
 		<meta name="description" content="" />
 	</head>
 	<body class="page">
-		<div class="page__wrapper">
+		<div class="page__wrapper" data-id="pageLocked">
 			<header class="header">
 				<div class="header__container">
 					<a class="header__logo" href="/">
@@ -69,42 +69,20 @@
 
 		<div class="modal" data-id="basketModal">
 			<div class="modal__container">
-				<button class="modal__close" aria-label="закрыть"></button>
+				<button
+					class="modal__close"
+					aria-label="закрыть"
+					data-id="closebutton"
+				></button>
 				<div class="modal__content">
 					<div class="basket">
 						<h2 class="modal__title">Корзина</h2>
-						<ul class="basket__list">
-							<!-- <li class="basket__item card card_compact">
-								<span class="basket__item-index">1</span>
-								<span class="card__title">Фреймворк куки судьбы</span>
-								<span class="card__price">2500 синапсов</span>
-								<button
-									class="basket__item-delete"
-									aria-label="удалить"
-								></button>
-							</li>
-							<li class="basket__item card card_compact">
-								<span class="basket__item-index">2</span>
-								<span class="card__title">+1 час в сутках</span>
-								<span class="card__price">750 синапсов</span>
-								<button
-									class="basket__item-delete"
-									aria-label="удалить"
-								></button>
-							</li>
-							<li class="basket__item card card_compact">
-								<span class="basket__item-index">3</span>
-								<span class="card__title">БЭМ-пилюлька</span>
-								<span class="card__price">150 000 синапсов</span>
-								<button
-									class="basket__item-delete"
-									aria-label="удалить"
-								></button>
-							</li> -->
+						<ul class="basket__list" data-id="basketList">
+							
 						</ul>
 						<div class="modal__actions">
-							<button class="button">Оформить</button>
-							<span class="basket__price">153 250 синапсов</span>
+							<button class="button" data-id="intermediateButton">Оформить</button>
+							<span class="basket__price">0 синапсов</span>
 						</div>
 					</div>
 				</div>
@@ -187,17 +165,24 @@
 			</div>
 		</div>
 
-		<template id="success">
-			<div class="order-success">
-				<h2 class="order-success__title">Заказ оформлен</h2>
-				<p class="order-success__description">Списано 0 синапсов</p>
-				<button class="button order-success__close">
+		<template id="success" data-id="successTemplate">
+			<div class="order-success" data-id="orderSuccess">
+				<h2 class="order-success__title" data-id="orderTitle">
+					Заказ оформлен
+				</h2>
+				<p class="order-success__description" data-id="amountMoneyDebited">
+					Списано 0 синапсов
+				</p>
+				<button
+					class="button order-success__close"
+					data-id="orderSuccessButton"
+				>
 					За новыми покупками!
 				</button>
 			</div>
 		</template>
 
-		<template id="card-catalog">
+		<template id="card-catalog" data-id="catalogtemplate">
 			<button class="gallery__item card" data-id="galleryItem">
 				<span class="card__category card__category_soft" data-id="cardCategory"
 					>софт-скил</span
@@ -213,60 +198,88 @@
 			</button>
 		</template>
 
-		<template id="card-preview">
-			<div class="card card_full">
+		<template id="card-preview" data-id="previewTemplate">
+			<div class="card card_full" data-id="cardPreview">
 				<img
 					class="card__image"
 					src="<%=require('../images/Subtract.svg')%>"
 					alt=""
+					data-id="imagePreview"
 				/>
 				<div class="card__column">
-					<span class="card__category card__category_other">другое</span>
-					<h2 class="card__title">Бэкенд-антистресс</h2>
-					<p class="card__text">
+					<span
+						class="card__category card__category_other"
+						data-id="cardCategoryPreview"
+						>другое</span
+					>
+					<h2 class="card__title" data-id="cardTitlePreview">
+						Бэкенд-антистресс
+					</h2>
+					<p class="card__text" data-id="cardDescriptionPreview">
 						Если планируете решать задачи в тренажёре - берите два.
 					</p>
 					<div class="card__row">
-						<button class="button card__button">В корзину</button>
-						<span class="card__price">1000 синапсов</span>
+						<button class="button card__button" data-id="cardButtonPreview">
+							В корзину
+						</button>
+						<span class="card__price" data-id="cardPricePreview"
+							>1000 синапсов</span
+						>
 					</div>
 				</div>
 			</div>
 		</template>
 
-		<template id="card-basket">
-			<li class="basket__item card card_compact">
-				<span class="basket__item-index">1</span>
-				<span class="card__title">Фреймворк куки судьбы</span>
-				<span class="card__price">2500 синапсов</span>
+		<template id="card-basket" data-id="addedProductTemplate">
+			<li class="basket__item card card_compact" data-id="basketItem">
+				<span class="basket__item-index" data-id="basketIndex">1</span>
+				<span class="card__title" data-id="basketCardTtitle"
+					>Фреймворк куки судьбы</span
+				>
+				<span class="card__price" data-id="basketCardPrice">2500 синапсов</span>
 				<button
 					class="basket__item-delete card__button"
 					aria-label="удалить"
+					data-id="basketItemDeleteButton"
 				></button>
 			</li>
 		</template>
 
-		<template id="basket">
-			<div class="basket">
-				<h2 class="modal__title">Корзина</h2>
-				<ul class="basket__list"></ul>
+		<template id="basket" data-id="basketTemplate">
+			<div class="basket" data-id="basketInside">
+				<h2 class="modal__title" data-id="basketTitle">Корзина</h2>
+				<ul class="basket__list" data-id="basketList"></ul>
 				<div class="modal__actions">
-					<button class="button basket__button">Оформить</button>
-					<span class="basket__price">0 синапсов</span>
+					<button class="button basket__button" data-id="makingOrderButton">
+						Оформить
+					</button>
+					<span class="basket__price" data-id="finalPriceButton"
+						>0 синапсов</span
+					>
 				</div>
 			</div>
 		</template>
 
-		<template id="order">
-			<form class="form" name="order">
+		<template id="order" data-id="orderTemplate">
+			<form class="form" name="order" data-id="formOrder">
 				<div class="order">
 					<div class="order__field">
 						<h2 class="modal__title">Способ оплаты</h2>
 						<div class="order__buttons">
-							<button name="card" type="button" class="button button_alt">
+							<button
+								name="card"
+								type="button"
+								class="button button_alt"
+								data-id="buttonOnline"
+							>
 								Онлайн
 							</button>
-							<button name="cash" type="button" class="button button_alt">
+							<button
+								name="cash"
+								type="button"
+								class="button button_alt"
+								data-id="buttonCash"
+							>
 								При получении
 							</button>
 						</div>
@@ -278,20 +291,26 @@
 							class="form__input"
 							type="text"
 							placeholder="Введите адрес"
+							data-id="formInputAdress"
 						/>
 					</label>
 				</div>
 				<div class="modal__actions">
-					<button type="submit" disabled class="button order__button">
+					<button
+						type="submit"
+						disabled
+						class="button order__button"
+						data-id="submitButtonFurther"
+					>
 						Далее
 					</button>
-					<span class="form__errors"></span>
+					<span class="form__errors" data-id="errorSpanAdress"></span>
 				</div>
 			</form>
 		</template>
 
-		<template id="contacts">
-			<form class="form" name="contacts">
+		<template id="contacts" data-id="contactsTemplate">
+			<form class="form" name="contacts" data-id="formContacts">
 				<div class="order">
 					<label class="order__field">
 						<span class="form__label modal__title">Email</span>
@@ -300,6 +319,7 @@
 							class="form__input"
 							type="text"
 							placeholder="Введите Email"
+							data-id="emailInput"
 						/>
 					</label>
 					<label class="order__field">
@@ -309,12 +329,20 @@
 							class="form__input"
 							type="text"
 							placeholder="+7 ("
+							data-id="phoneInput"
 						/>
 					</label>
 				</div>
 				<div class="modal__actions">
-					<button type="submit" disabled class="button">Оплатить</button>
-					<span class="form__errors"></span>
+					<button
+						type="submit"
+						disabled
+						class="button"
+						data-id="submitButtonContacts"
+					>
+						Оплатить
+					</button>
+					<span class="form__errors" data-id="errorSpanContacts"></span>
 				</div>
 			</form>
 		</template>
