--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -255,7 +255,7 @@
 		</template>
 
 		<template id="card-basket" data-id="addedProductTemplate">
-			<li class="basket__item card card_compact" data-id="basketItem">
+			<li class="basket__item card card_compact" data-id="basketItem" data-item-id="">
 				<span class="basket__item-index" data-id="basketIndex">1</span>
 				<span class="card__title" data-id="basketCardTtitle"
 					>Фреймворк куки судьбы</span
