--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -294,7 +294,7 @@
 							<button
 								name="card"
 								type="button"
-								class="button button_alt button_alt-active"
+								class="button button_alt"
 								data-id="buttonOnline"
 							>
 								Онлайн
