--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,7 +15,7 @@
 		<meta name="description" content="" />
 	</head>
 	<body class="page">
-		<div class="page__wrapper" data-id="pageLocked">
+		<div class="page__wrapper">
 			<header class="header">
 				<div class="header__container">
 					<a class="header__logo" href="/">
@@ -25,40 +25,23 @@
 							alt="Film! logo"
 						/>
 					</a>
-					<button class="header__basket" data-id="basketOn">
-						<span class="header__basket-counter" data-id="basketCounter">0</span>
+					<button class="header__basket">
+						<span class="header__basket-counter">0</span>
 					</button>
 				</div>
 			</header>
 
-			<main class="gallery" data-id="main"></main>
+			<main class="gallery"></main>
 		</div>
 
 		<div class="modal" id="modal-container">
 			<div class="modal__container">
 				<button class="modal__close" aria-label="закрыть"></button>
-				<div class="modal__content">
-					<!-- <div class="basket" data-id="basketInside">
-						<h2 class="modal__title" data-id="basketTitle">Корзина</h2>
-						<ul class="basket__list" data-id="basketListTemplate">
-							<li>
-								<h1>zalupa</h1>
-							</li>
-						</ul>
-						<div class="modal__actions">
-							<button class="button basket__button" data-id="makingOrderButton">
-								Оформить
-							</button>
-							<span class="basket__price" data-id="finalPriceButton"
-								>0 синапсов</span
-							>
-						</div>
-					</div> -->
-				</div>
+				<div class="modal__content"></div>
 			</div>
 		</div>
 
-		<div class="modal" data-id="modalPreview">
+		<div class="modal">
 			<div class="modal__container">
 				<button class="modal__close" aria-label="закрыть"></button>
 				<div class="modal__content">
@@ -72,7 +55,7 @@
 							<span class="card__category card__category_other">другое</span>
 							<h2 class="card__title">Бэкенд-антистресс</h2>
 							<p class="card__text">
-								Если планируете решать задачи в тренажёре - берите два.
+								Если планируете решать задачи в тренажёре, берите два.
 							</p>
 							<div class="card__row">
 								<button class="button">В корзину</button>
@@ -84,22 +67,44 @@
 			</div>
 		</div>
 
-		<div class="modal" data-id="basketModal">
+		<div class="modal">
 			<div class="modal__container">
-				<button
-					class="modal__close"
-					aria-label="закрыть"
-					data-id="closebutton"
-				></button>
+				<button class="modal__close" aria-label="закрыть"></button>
 				<div class="modal__content">
 					<div class="basket">
 						<h2 class="modal__title">Корзина</h2>
-						<ul class="basket__list" data-id="basketList"></ul>
+						<ul class="basket__list">
+							<li class="basket__item card card_compact">
+								<span class="basket__item-index">1</span>
+								<span class="card__title">Фреймворк куки судьбы</span>
+								<span class="card__price">2500 синапсов</span>
+								<button
+									class="basket__item-delete"
+									aria-label="удалить"
+								></button>
+							</li>
+							<li class="basket__item card card_compact">
+								<span class="basket__item-index">2</span>
+								<span class="card__title">+1 час в сутках</span>
+								<span class="card__price">750 синапсов</span>
+								<button
+									class="basket__item-delete"
+									aria-label="удалить"
+								></button>
+							</li>
+							<li class="basket__item card card_compact">
+								<span class="basket__item-index">3</span>
+								<span class="card__title">БЭМ-пилюлька</span>
+								<span class="card__price">150 000 синапсов</span>
+								<button
+									class="basket__item-delete"
+									aria-label="удалить"
+								></button>
+							</li>
+						</ul>
 						<div class="modal__actions">
-							<button class="button" data-id="intermediateButton">
-								Оформить?
-							</button>
-							<span class="basket__price">0 синапсов</span>
+							<button class="button">Оформить</button>
+							<span class="basket__price">153 250 синапсов</span>
 						</div>
 					</div>
 				</div>
@@ -182,127 +187,83 @@
 			</div>
 		</div>
 
-		<template id="success" data-id="successTemplate">
-			<div class="order-success" data-id="orderSuccess">
-				<h2 class="order-success__title" data-id="orderTitle">
-					Заказ оформлен
-				</h2>
-				<p class="order-success__description" data-id="amountMoneyDebited">
-					Списано 0 синапсов
-				</p>
-				<button
-					class="button order-success__close"
-					data-id="orderSuccessButton"
-				>
+		<template id="success">
+			<div class="order-success">
+				<h2 class="order-success__title">Заказ оформлен</h2>
+				<p class="order-success__description">Списано 0 синапсов</p>
+				<button class="button order-success__close">
 					За новыми покупками!
 				</button>
 			</div>
 		</template>
 
-		<template id="card-catalog" data-id="catalogtemplate">
-			<button
-				class="gallery__item card"
-				data-id="galleryItem"
-				data-id-personal=""
-				data-description=""
-			>
-				<span class="card__category card__category_soft" data-id="cardCategory"
-					>софт-скил</span
-				>
-				<h2 class="card__title" data-id="cardTitle">+1 час в сутках</h2>
+		<template id="card-catalog">
+			<button class="gallery__item card">
+				<span class="card__category card__category_soft">софт-скил</span>
+				<h2 class="card__title">+1 час в сутках</h2>
 				<img
 					class="card__image"
 					src="<%=require('../images/Subtract.svg')%>"
 					alt=""
-					data-id="cardImage"
 				/>
-				<span class="card__price" data-id="cardPrice">750 синапсов</span>
+				<span class="card__price">750 синапсов</span>
 			</button>
 		</template>
 
-		<template id="card-preview" data-id="previewTemplate">
-			<div class="card card_full" data-id="cardPreview" data-id-personal="">
+		<template id="card-preview">
+			<div class="card card_full">
 				<img
 					class="card__image"
 					src="<%=require('../images/Subtract.svg')%>"
 					alt=""
-					data-id="imagePreview"
 				/>
 				<div class="card__column">
-					<span
-						class="card__category card__category_other"
-						data-id="cardCategoryPreview"
-						>другое</span
-					>
-					<h2 class="card__title" data-id="cardTitlePreview">
-						Бэкенд-антистресс
-					</h2>
-					<p class="card__text" data-id="cardDescriptionPreview">
-						Если планируете решать задачи в тренажёре - берите два.
+					<span class="card__category card__category_other">другое</span>
+					<h2 class="card__title">Бэкенд-антистресс</h2>
+					<p class="card__text">
+						Если планируете решать задачи в тренажёре, берите два.
 					</p>
 					<div class="card__row">
-						<button class="button card__button" data-id="cardButtonPreview" data-clicks="0">
-							В корзину
-						</button>
-						<span class="card__price" data-id="cardPricePreview"
-							>1000 синапсов</span
-						>
+						<button class="button card__button">В корзину</button>
+						<span class="card__price">1000 синапсов</span>
 					</div>
 				</div>
 			</div>
 		</template>
 
-		<template id="card-basket" data-id="addedProductTemplate">
-			<li class="basket__item card card_compact" data-id="basketItem" data-item-id="">
-				<span class="basket__item-index" data-id="basketIndex">1</span>
-				<span class="card__title" data-id="basketCardTtitle"
-					>Фреймворк куки судьбы</span
-				>
-				<span class="card__price" data-id="basketCardPrice">2500 синапсов</span>
+		<template id="card-basket">
+			<li class="basket__item card card_compact">
+				<span class="basket__item-index">1</span>
+				<span class="card__title">Фреймворк куки судьбы</span>
+				<span class="card__price">2500 синапсов</span>
 				<button
 					class="basket__item-delete card__button"
 					aria-label="удалить"
-					data-id="basketItemDeleteButton"
 				></button>
 			</li>
 		</template>
 
-		<template id="basket" data-id="basketTemplate">
-			<div class="basket" data-id="basketInside">
-				<h2 class="modal__title" data-id="basketTitle">Корзина</h2>
-				<ul class="basket__list" data-id="basketListTemplate">
-				</ul>
+		<template id="basket">
+			<div class="basket">
+				<h2 class="modal__title">Корзина</h2>
+				<ul class="basket__list"></ul>
 				<div class="modal__actions">
-					<button class="button basket__button" data-id="makingOrderButton">
-						Оформить
-					</button>
-					<span class="basket__price" data-id="finalPrice"
-						>0 синапсов</span
-					>
+					<button class="button basket__button">Оформить</button>
+					<span class="basket__price">0 синапсов</span>
 				</div>
 			</div>
 		</template>
 
-		<template id="order" data-id="orderTemplate">
-			<form class="form" name="order" data-id="formOrder">
+		<template id="order">
+			<form class="form" name="order">
 				<div class="order">
 					<div class="order__field">
 						<h2 class="modal__title">Способ оплаты</h2>
 						<div class="order__buttons">
-							<button
-								name="card"
-								type="button"
-								class="button button_alt button_alt-active"
-								data-id="buttonOnline"
-							>
+							<button name="card" type="button" class="button button_alt">
 								Онлайн
 							</button>
-							<button
-								name="cash"
-								type="button"
-								class="button button_alt"
-								data-id="buttonCash"
-							>
+							<button name="cash" type="button" class="button button_alt">
 								При получении
 							</button>
 						</div>
@@ -314,30 +275,20 @@
 							class="form__input"
 							type="text"
 							placeholder="Введите адрес"
-							pattern="^[a-zA-Zа-яА-ЯёЁ0-9\s.,\-\/]{5,100}$"
-							id="adress"
-							data-error-message="Введенный адрес неккоректен"
-							data-id="formInputAdress"
-							data-error-for="address"
 						/>
 					</label>
-					<!-- pattern="[a-zA-zа-яА-яёЁ\s\-]+$" -->
 				</div>
 				<div class="modal__actions">
-					<button
-						type="submit"
-						class="button order__button form__submit"
-						data-id="submitButtonFurther"
-					>
+					<button type="submit" disabled class="button order__button">
 						Далее
 					</button>
-					<span class="form__errors adress-error" data-id="errorSpanAdress"></span>
+					<span class="form__errors"></span>
 				</div>
 			</form>
 		</template>
-<!--  -->
-		<template id="contacts" data-id="contactsTemplate">
-			<form class="form" name="contacts" data-id="formContacts">
+
+		<template id="contacts">
+			<form class="form" name="contacts">
 				<div class="order">
 					<label class="order__field">
 						<span class="form__label modal__title">Email</span>
@@ -346,10 +297,6 @@
 							class="form__input"
 							type="text"
 							placeholder="Введите Email"
-							pattern="^\S+@\S+\.\S+$"
-							id="email"
-							data-error-message="Веденный email не корректен"
-							data-id="emailInput"
 						/>
 					</label>
 					<label class="order__field">
@@ -358,23 +305,13 @@
 							name="phone"
 							class="form__input"
 							type="text"
-							id="phone"
 							placeholder="+7 ("
-							pattern="^((8|\+374|\+994|\+995|\+375|\+7|\+380|\+38|\+996|\+998|\+993)[\- ]?)?\(?\d{3,5}\)?[\- ]?\d{1}[\- ]?\d{1}[\- ]?\d{1}[\- ]?\d{1}[\- ]?\d{1}(([\- ]?\d{1})?[\- ]?\d{1})?$"
-							data-error-message="Веденный телефон не корректен"
-							data-id="phoneInput"
 						/>
 					</label>
 				</div>
 				<div class="modal__actions">
-					<button
-						type="submit"
-						class="button form__submit" 
-						data-id="submitButtonContacts"
-					>
-						Оплатить
-					</button>
-					<span class="form__errors email-error phone-error" data-id="errorSpanContacts"></span>
+					<button type="submit" disabled class="button">Оплатить</button>
+					<span class="form__errors"></span>
 				</div>
 			</form>
 		</template>
